@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Find a thread
class MessageThread {
  +Guid RequestId
  +Guid ListingId
  +Guid OwnerId
  +Guid RequesterId
  +IsParty(memberId: Guid): bool
  +OtherParty(memberId: Guid): Guid
  +Append(id: Guid, sender: Guid, body: string, sentAt: DateTimeOffset): Message
  +MarkRead(id: Guid, memberId: Guid, readAt: DateTimeOffset): void
  +IsUnreadFor(memberId: Guid): bool
}
class Message {
  +Guid SenderId
  +string Body
  +DateTimeOffset SentAt
}
class ThreadReadMark {
  +Guid MemberId
  +DateTimeOffset ReadAt
  +MoveTo(readAt: DateTimeOffset): void
}
MessageThread "1" *-- "*" Message : contains
MessageThread "1" *-- "0..2" ThreadReadMark : reader positions
@enduml
